--- a/Exercise3/contact.html
+++ b/Exercise3/contact.html
@@ -14,99 +14,109 @@
 </head>
 
 <body>
-    <header class="header-light-color">
-        <a href="index.html"><img src="/assets/Technodata-logos_black.png" width="700" height="160"
-                alt="Technodata λογότυτπο"></a>
 
-        <nav class="navigation">
-            <a href="/Exercise2/index.html">ΑΡΧΙΚΗ</a>
-            <a href="/Exercise2/product-categories.html#technology">ΠΡΟΙΟΝΤΑ ΚΑΙ ΤΕΧΝΟΛΟΓΙΑ</a>
-            <a href="/Exercise2/product-categories.html#spiti">ΓΙΑ ΤΟ ΣΠΙΤΙ</a>
-            <a href="/Exercise2/stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
-            <a href="/Exercise2/contact.html" class="active">ΕΠΙΚΟΙΝΩΝΙΑ</a>
-            <a href="/Exercise2/about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
-        </nav>
-    </header>
+    <div class="grid-container">
+        <div class="header-item">
+            <header class="header-light-color">
+                <a href="index.html"><img src="/assets/Technodata-logos_black.png" width="700" height="160"
+                        alt="Technodata λογότυτπο"></a>
 
-    <main class="main-content">
-        <h2>Τεχνική Υποστήριξη</h2>
-
-        <h3 id="forma-titlos">Φόρμα Επικοινωνίας</h3>
-
-        <div class="forma">
-            <form action="index.html" method="GET" enctype="multipart/form-data" class="forma-yposthrikshs">
-                <div class="forma-input">
-                    <label for="onoma">Όνομα:</label>
-                    <input type="text" id="onoma" name="onoma">
-                </div>
-
-                <div class="forma-input">
-                    <label for="epwnymo">Επώνυμο:</label>
-                    <input type="text" id="epwnymo" name="epwnymo">
-                </div>
-
-                <div class="forma-input">
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" placeholder="someone@gmail.com">
-                </div>
-
-                <div class="forma-input">
-                    <label for="telephone">Τηλέφωνο:</label>
-                    <input type="tel" id="telephone" name="telephone" placeholder="πχ 6953468217">
-                </div>
-
-                <div class="forma-input">
-                    <label for="productcode">Κωδικός Προϊόντος:</label>
-                    <input type="number" id="productcode" name="productcode">
-                </div>
-
-                <div class="forma-input">
-                    <label for="orderdate">Ημερομηνία Αγοράς:</label>
-                    <input type="date" id="orderdate" name="orderdate">
-                </div>
-
-                <div class="forma-input">
-                    <label for="file">Απόδειξη Αγοράς:</label>
-                    <input type="file" id="file" name="file">
-                </div>
-
-                <div class="forma-input">
-                    <label for="perigrafh">Περιγραφή του Προβλήματος:</label>
-                    <textarea id="perigrafh" name="perigrafh" placeholder="Γράψτε εδώ..."></textarea>
-                </div>
-
-                <div class="forma-input">
-                    <input type="submit">
-                </div>
-            </form>
+                <nav class="navigation">
+                    <a href="/Exercise2/index.html">ΑΡΧΙΚΗ</a>
+                    <a href="/Exercise2/product-categories.html#technology">ΠΡΟΙΟΝΤΑ ΚΑΙ ΤΕΧΝΟΛΟΓΙΑ</a>
+                    <a href="/Exercise2/product-categories.html#spiti">ΓΙΑ ΤΟ ΣΠΙΤΙ</a>
+                    <a href="/Exercise2/stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
+                    <a href="/Exercise2/contact.html" class="active">ΕΠΙΚΟΙΝΩΝΙΑ</a>
+                    <a href="/Exercise2/about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
+                </nav>
+            </header>
         </div>
-    </main>
 
-    <footer class="footer-content">
-        <h4>Βρείτε μας στα ακόλουθα social media</h4>
+        <div class="main-item">
+            <main class="main-content">
+                <h2>Τεχνική Υποστήριξη</h2>
 
-        <a href="/Exercise2/index.html">
-            <img src="/assets/facebook_logo.png" width="50" height="50" alt="Facebook λογότυπο">
-        </a>
+                <h3 id="forma-titlos">Φόρμα Επικοινωνίας</h3>
 
-        <a href="/Exercise2/index.html">
-            <img src="/assets/twitter_logo.png" width="50" height="50" alt="Twitter λογότυπο">
-        </a>
+                <div class="forma">
+                    <form action="index.html" method="GET" enctype="multipart/form-data" class="forma-yposthrikshs">
+                        <div class="forma-input">
+                            <label for="onoma">Όνομα:</label>
+                            <input type="text" id="onoma" name="onoma">
+                        </div>
 
-        <a href="/Exercise2/index.html">
-            <img src="/assets/instagram_new.png" width="50" height="50" alt="Instagram λογότυπο">
-        </a>
+                        <div class="forma-input">
+                            <label for="epwnymo">Επώνυμο:</label>
+                            <input type="text" id="epwnymo" name="epwnymo">
+                        </div>
 
-        <a href="/Exercise2/index.html">
-            <img src="/assets/youtube_logo.png" width="50" height="50" alt="Youtube λογότυπο">
-        </a>
+                        <div class="forma-input">
+                            <label for="email">Email:</label>
+                            <input type="email" id="email" name="email" placeholder="someone@gmail.com">
+                        </div>
 
-        <h4>©2022 Techodata Computers</h4>
+                        <div class="forma-input">
+                            <label for="telephone">Τηλέφωνο:</label>
+                            <input type="tel" id="telephone" name="telephone" placeholder="πχ 6953468217">
+                        </div>
 
-        <a href="/Exercise2/index.html">
-            <img src="/assets/Technodata-logos_cropped_footer.png" width="170" height="50" alt="Tecnhodata λογότυπο">
-        </a>
-    </footer>
+                        <div class="forma-input">
+                            <label for="productcode">Κωδικός Προϊόντος:</label>
+                            <input type="number" id="productcode" name="productcode">
+                        </div>
+
+                        <div class="forma-input">
+                            <label for="orderdate">Ημερομηνία Αγοράς:</label>
+                            <input type="date" id="orderdate" name="orderdate">
+                        </div>
+
+                        <div class="forma-input">
+                            <label for="file">Απόδειξη Αγοράς:</label>
+                            <input type="file" id="file" name="file">
+                        </div>
+
+                        <div class="forma-input">
+                            <label for="perigrafh">Περιγραφή του Προβλήματος:</label>
+                            <textarea id="perigrafh" name="perigrafh" placeholder="Γράψτε εδώ..."></textarea>
+                        </div>
+
+                        <div class="forma-input">
+                            <input type="submit">
+                        </div>
+                    </form>
+                </div>
+            </main>
+        </div>
+
+        
+        <div class="footer-item">
+            <footer class="footer-content">
+                <h4>Βρείτε μας στα ακόλουθα social media</h4>
+
+                <a href="/Exercise2/index.html">
+                    <img src="/assets/facebook_logo.png" width="50" height="50" alt="Facebook λογότυπο">
+                </a>
+
+                <a href="/Exercise2/index.html">
+                    <img src="/assets/twitter_logo.png" width="50" height="50" alt="Twitter λογότυπο">
+                </a>
+
+                <a href="/Exercise2/index.html">
+                    <img src="/assets/instagram_new.png" width="50" height="50" alt="Instagram λογότυπο">
+                </a>
+
+                <a href="/Exercise2/index.html">
+                    <img src="/assets/youtube_logo.png" width="50" height="50" alt="Youtube λογότυπο">
+                </a>
+
+                <h4>©2022 Techodata Computers</h4>
+
+                <a href="/Exercise2/index.html">
+                    <img src="/assets/Technodata-logos_cropped_footer.png" width="170" height="50" alt="Tecnhodata λογότυπο">
+                </a>
+            </footer>
+        </div>
+    </div>
 </body>
 
 </html>
