--- a/Exercise3/index.html
+++ b/Exercise3/index.html
@@ -14,119 +14,126 @@
 </head>
 
 <body>
-    <header class="header-light-color">
-        <a href="/Exercise2/index.html">
-            <img src="/assets/Technodata-logos_black.png" width="700" height="160" alt="Technodata λογότυτπο">
-        </a>
-
-        <nav class="navigation">
-            <a href="/Exercise2/index.html" class="active">ΑΡΧΙΚΗ</a>
-            <a href="/Exercise2/product-categories.html#technology">ΠΡΟΙΟΝΤΑ ΚΑΙ ΤΕΧΝΟΛΟΓΙΑ</a>
-            <a href="/Exercise2/product-categories.html#spiti">ΓΙΑ ΤΟ ΣΠΙΤΙ</a>
-            <a href="/Exercise2/stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
-            <a href="/Exercise2/contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
-            <a href="/Exercise2/about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
-        </nav>
-    </header>
-
-
-    <main class="main-content">
-        <h2 class="welcome">Καλως Ήρθατε στο Τechnodata!</h2>
-
-        <p>
-            Στο eshop μας θα μπορέσετε να προμηθευτείτε και να διαλέξετε απο μια ευρεία γκάμα προϊόντων τεχνολογίας όπως
-            κινητές συσκευές, υπολογιστές αλλά και οικιακές συσκευές στις χαμηλότερες τιμές της αγοράς με την εγγύηση
-            ποιότητας του ομίλου μας.
-        </p>
-
-
-        <section class="section-promote">
-            <h2>Νέες Παραλαβές</h2> <!-- ΙΣΩΣ ΒΑΛΟΥΜΕ ΚΛΑΣΣ ΣΤΟ Η2 ΜΟΝΟ ΤΟΥ Η ΣΤΑ ΥΠΟΛΟΙΠΑ-->
-
-            <p>Νέα κομμάτια διαθέσιμα σε όλες τις αποχρώσεις και χωρητικότητες!</p>
-
-            <div class="product">
-                <a href="/Exercise2/product-iphone14-pro-max.html">
-                    <img src="/assets/iphone14pro.png" width="245" height="230" alt="Apple iPhone 14 Pro Max"
-                        class="image">
+    <div class="grid-container">
+        <div class="header-item">
+            <header class="header-light-color">
+                <a href="/Exercise2/index.html">
+                    <img src="/assets/Technodata-logos_black.png" width="700" height="160" alt="Technodata λογότυτπο">
                 </a>
-            </div>
 
-            <div class="product">
-                <a href="/Exercise2/products-phones.html">
-                    <img src="/assets/samsungs22.png" width="245" height="230" alt="Samsung S22 Ultra" class="image">
+                <nav class="navigation">
+                    <a href="/Exercise2/index.html" class="active">ΑΡΧΙΚΗ</a>
+                    <a href="/Exercise2/product-categories.html#technology">ΠΡΟΙΟΝΤΑ ΚΑΙ ΤΕΧΝΟΛΟΓΙΑ</a>
+                    <a href="/Exercise2/product-categories.html#spiti">ΓΙΑ ΤΟ ΣΠΙΤΙ</a>
+                    <a href="/Exercise2/stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
+                    <a href="/Exercise2/contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
+                    <a href="/Exercise2/about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
+                </nav>
+            </header>
+        </div>
+
+        <div class="main-item">
+            <main class="main-content">
+                <h2 class="welcome">Καλως Ήρθατε στο Τechnodata!</h2>
+
+                <p>
+                    Στο eshop μας θα μπορέσετε να προμηθευτείτε και να διαλέξετε απο μια ευρεία γκάμα προϊόντων τεχνολογίας όπως
+                    κινητές συσκευές, υπολογιστές αλλά και οικιακές συσκευές στις χαμηλότερες τιμές της αγοράς με την εγγύηση
+                    ποιότητας του ομίλου μας.
+                </p>
+
+
+                <section class="section-promote">
+                    <h2>Νέες Παραλαβές</h2> <!-- ΙΣΩΣ ΒΑΛΟΥΜΕ ΚΛΑΣΣ ΣΤΟ Η2 ΜΟΝΟ ΤΟΥ Η ΣΤΑ ΥΠΟΛΟΙΠΑ-->
+
+                    <p>Νέα κομμάτια διαθέσιμα σε όλες τις αποχρώσεις και χωρητικότητες!</p>
+
+                    <div class="product">
+                        <a href="/Exercise2/product-iphone14-pro-max.html">
+                            <img src="/assets/iphone14pro.png" width="245" height="230" alt="Apple iPhone 14 Pro Max"
+                                class="image">
+                        </a>
+                    </div>
+
+                    <div class="product">
+                        <a href="/Exercise2/products-phones.html">
+                            <img src="/assets/samsungs22.png" width="245" height="230" alt="Samsung S22 Ultra" class="image">
+                        </a>
+                    </div>
+
+                    <div class="product">
+                        <a href="/Exercise2/products-phones.html">
+                            <img src="/assets/xiaomi.png" width="260" height="230" alt="Xiaomi 12T Pro" class="image">
+                        </a>
+                    </div>
+
+                    <div class="product">
+                        <a href="/Exercise2/products-phones.html">
+                            <img src="/assets/ipad.png" width="230" height="230" alt="Apple iPad Pro" class="image">
+                        </a>
+                    </div>
+                </section>
+
+                <section class="section-promote">
+                    <h2>Hot Προσφορές</h2>
+
+                    <p>Εκθεσιακά προϊόντα και προηγούμενης γενίας σε μειωμένες τιμές</p>
+
+                    <div class="product">
+                        <a href="/Exercise2/products-phones.html">
+                            <img src="/assets/iphone_old.png" width="255" height="240" alt="Apple iPhone 11" class="image">
+                        </a>
+                    </div>
+
+                    <div class="product">
+                        <a href="/Exercise2/products-phones.html">
+                            <img src="/assets/samsung_old.png" width="155" height="240" alt="Samsung S10+" class="image">
+                        </a>
+                    </div>
+
+                    <div class="product">
+                        <a href="/Exercise2/products-phones.html">
+                            <img src="/assets/xiaomi_old.png" width="255" height="240" alt="Xiaomi Pad 5" class="image">
+                        </a>
+                    </div>
+
+                    <div class="product">
+                        <a href="/Exercise2/products-phones.html">
+                            <img src="/assets/apple_watch.png" width="255" height="240" alt="Apple Watch Series 2"
+                                class="image">
+                        </a>
+                    </div>
+                </section>
+            </main>
+        </div>
+
+        <div class="footer-item">
+            <footer class="footer-content">
+                <h4>Βρείτε μας στα ακόλουθα social media</h4> <!-- ΙΣΩΣ ΒΑΛΟΥΜΕ ΚΛΑΣΣ ΣΤΟ Η4 ΜΟΝΟ ΤΟΥ Η ΣΤΑ ΥΠΟΛΟΙΠΑ-->
+
+                <a href="/Exercise2/index.html">
+                    <img src="/assets/facebook_logo.png" width="50" height="50" alt="Facebook λογότυπο">
                 </a>
-            </div>
 
-            <div class="product">
-                <a href="/Exercise2/products-phones.html">
-                    <img src="/assets/xiaomi.png" width="260" height="230" alt="Xiaomi 12T Pro" class="image">
+                <a href="/Exercise2/index.html">
+                    <img src="/assets/twitter_logo.png" width="50" height="50" alt="Twitter λογότυπο">
                 </a>
-            </div>
 
-            <div class="product">
-                <a href="/Exercise2/products-phones.html">
-                    <img src="/assets/ipad.png" width="230" height="230" alt="Apple iPad Pro" class="image">
+                <a href="/Exercise2/index.html">
+                    <img src="/assets/instagram_new.png" width="50" height="50" alt="Instagram λογότυπο">
                 </a>
-            </div>
-        </section>
 
-        <section class="section-promote">
-            <h2>Hot Προσφορές</h2>
-
-            <p>Εκθεσιακά προϊόντα και προηγούμενης γενίας σε μειωμένες τιμές</p>
-
-            <div class="product">
-                <a href="/Exercise2/products-phones.html">
-                    <img src="/assets/iphone_old.png" width="255" height="240" alt="Apple iPhone 11" class="image">
+                <a href="/Exercise2/index.html">
+                    <img src="/assets/youtube_logo.png" width="50" height="50" alt="Youtube λογότυπο">
                 </a>
-            </div>
+                <h4>©2022 Techodata Computers</h4>
 
-            <div class="product">
-                <a href="/Exercise2/products-phones.html">
-                    <img src="/assets/samsung_old.png" width="155" height="240" alt="Samsung S10+" class="image">
+                <a href="/Exercise2/index.html">
+                    <img src="/assets/Technodata-logos_cropped_footer.png" width="170" height="50" alt="Tecnhodata λογότυπο">
                 </a>
-            </div>
-
-            <div class="product">
-                <a href="/Exercise2/products-phones.html">
-                    <img src="/assets/xiaomi_old.png" width="255" height="240" alt="Xiaomi Pad 5" class="image">
-                </a>
-            </div>
-
-            <div class="product">
-                <a href="/Exercise2/products-phones.html">
-                    <img src="/assets/apple_watch.png" width="255" height="240" alt="Apple Watch Series 2"
-                        class="image">
-                </a>
-            </div>
-        </section>
-    </main>
-
-    <footer class="footer-content">
-        <h4>Βρείτε μας στα ακόλουθα social media</h4> <!-- ΙΣΩΣ ΒΑΛΟΥΜΕ ΚΛΑΣΣ ΣΤΟ Η4 ΜΟΝΟ ΤΟΥ Η ΣΤΑ ΥΠΟΛΟΙΠΑ-->
-
-        <a href="/Exercise2/index.html">
-            <img src="/assets/facebook_logo.png" width="50" height="50" alt="Facebook λογότυπο">
-        </a>
-
-        <a href="/Exercise2/index.html">
-            <img src="/assets/twitter_logo.png" width="50" height="50" alt="Twitter λογότυπο">
-        </a>
-
-        <a href="/Exercise2/index.html">
-            <img src="/assets/instagram_new.png" width="50" height="50" alt="Instagram λογότυπο">
-        </a>
-
-        <a href="/Exercise2/index.html">
-            <img src="/assets/youtube_logo.png" width="50" height="50" alt="Youtube λογότυπο">
-        </a>
-        <h4>©2022 Techodata Computers</h4>
-
-        <a href="/Exercise2/index.html">
-            <img src="/assets/Technodata-logos_cropped_footer.png" width="170" height="50" alt="Tecnhodata λογότυπο">
-        </a>
-    </footer>
+            </footer>
+        </div>
+    </div>
 </body>
 
 </html>
