--- a/Exercise3/product-iphone14-pro-max.html
+++ b/Exercise3/product-iphone14-pro-max.html
@@ -14,255 +14,267 @@
 </head>
 
 <body>
-    <header class="header-light-color">
-        <a href="/Exercise2/index.html">
-            <img src="/assets/Technodata-logos_black.png" width="700" height="160" alt="Technodata λογότυτπο">
-        </a>
 
-        <nav class="navigation">
-            <a href="/Exercise2/index.html">ΑΡΧΙΚΗ</a>
-            <a href="/Exercise2/product-categories.html#technology" class="active">ΠΡΟΙΟΝΤΑ ΚΑΙ ΤΕΧΝΟΛΟΓΙΑ</a>
-            <a href="/Exercise2/product-categories.html#spiti">ΓΙΑ ΤΟ ΣΠΙΤΙ</a>
-            <a href="/Exercise2/stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
-            <a href="/Exercise2/contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
-            <a href="/Exercise2/about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
-        </nav>
-    </header>
+    <div class="grid-container">
+        <div class="header-item">
+            <header class="header-light-color">
+                <a href="/Exercise2/index.html">
+                    <img src="/assets/Technodata-logos_black.png" width="700" height="160" alt="Technodata λογότυτπο">
+                </a>
 
-    <main class="main-content">
-        <h2 id="iphone-name">Apple iPhone 14 Pro Max 128GB - Space Black Κινητό Smartphone</h2>
-
-        <h3 id="category"> <a href="/Exercise2/products-phones.html">Κινητό Τηλέφωνο</a></h3>
-
-        <h4 id="iphone-code">267271</h4>
-
-        <img src="/assets/iphone14pro.png" width="350" height="350" class="display-photo" alt="Apple iPhone 14 Pro Max">
-
-        <section class="product-descr">
-            <div class="outer-box">
-                <div class="manifacturer">
-                    <h3>Κατασκευαστής</h3>
-
-                    <img src="/assets/apple_logo.png" width="100" height="100" alt="Apple λογότυπο">
-                </div>
-
-                <div class="perigrafh">
-                    <h3>Περιγραφή προϊόντος</h3>
-
-                    <p>iPhone 14 Pro Max. Αιχμαλώτισε εικόνες με απίστευτη λεπτομέρεια με την κύρια κάμερα 48MP. Ζήσε τη
-                        νέα εμπειρία iPhone με τη νέα Dynamic Island και την οθόνη Always-On. Η λειτουργία Crash
-                        Detection, μια νέα δυνατότητα ασφάλειας, καλεί σε βοήθεια όταν εσύ δεν μπορείς.
-                    </p>
-                </div>
-
-                <div class="xarakthristika">
-                    <h3>Χαρακτηριστικά</h3>
-
-                    <p>Μέγεθος Οθόνης σε Ίντσες: 6.7 <br>
-                        Κύρια Κάμερα: Triple 48 Mp & 12 Mp & 12 Mp<br>
-                        Selfie Κάμερα: 12 Mp<br>
-                        Πλήθος Πυρήνων: Hexa Core<br>
-                        Χωρητικότητα σε GB: 128<br>
-                        Εύρος Οθόνης: 6 ίντσες και άνω
-                    </p>
-                </div>
-            </div>
-        </section>
-
-        <div id="iphone">
-            <p>€1549.00</p>
+                <nav class="navigation">
+                    <a href="/Exercise2/index.html">ΑΡΧΙΚΗ</a>
+                    <a href="/Exercise2/product-categories.html#technology" class="active">ΠΡΟΙΟΝΤΑ ΚΑΙ ΤΕΧΝΟΛΟΓΙΑ</a>
+                    <a href="/Exercise2/product-categories.html#spiti">ΓΙΑ ΤΟ ΣΠΙΤΙ</a>
+                    <a href="/Exercise2/stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
+                    <a href="/Exercise2/contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
+                    <a href="/Exercise2/about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
+                </nav>
+            </header>
         </div>
 
-        <img src="/assets/analytiko.jpg" class="comparison"
-            alt="Διαφορές καινούριων μοντέλων και σύγκριση χαρακτηριστικών">
+        <div class="main-item">
+            <main class="main-content">
+                <h2 id="iphone-name">Apple iPhone 14 Pro Max 128GB - Space Black Κινητό Smartphone</h2>
 
-        <section class="analytika-xarakthristika">
-            <div class="row-title">
-                <h3>Τεχνικά Χαρακτηριστικά</h3>
-            </div>
+                <h3 id="category"> <a href="/Exercise2/products-phones.html">Κινητό Τηλέφωνο</a></h3>
 
-            <div class="row">
-                <div class="label">Mέγεθος Οθόνης σε Ίντσες</div>
+                <h4 id="iphone-code">267271</h4>
 
-                <div class="value">6.7</div>
-            </div>
+                <img src="/assets/iphone14pro.png" width="350" height="350" class="display-photo" alt="Apple iPhone 14 Pro Max">
 
-            <div class="row">
-                <div class="label">Κύρια Κάμερα</div>
+                <section class="product-descr">
+                    <div class="outer-box">
+                        <div class="manifacturer">
+                            <h3>Κατασκευαστής</h3>
 
-                <div class="value">Triple 48 Mp & 12 Mp & 12 Mp </div>
-            </div>
+                            <img src="/assets/apple_logo.png" width="100" height="100" alt="Apple λογότυπο">
+                        </div>
 
-            <div class="row">
-                <div class="label">Selfie Κάμερα</div>
+                        <div class="perigrafh">
+                            <h3>Περιγραφή προϊόντος</h3>
 
-                <div class="value">12 Mp</div>
-            </div>
+                            <p>iPhone 14 Pro Max. Αιχμαλώτισε εικόνες με απίστευτη λεπτομέρεια με την κύρια κάμερα 48MP. Ζήσε τη
+                                νέα εμπειρία iPhone με τη νέα Dynamic Island και την οθόνη Always-On. Η λειτουργία Crash
+                                Detection, μια νέα δυνατότητα ασφάλειας, καλεί σε βοήθεια όταν εσύ δεν μπορείς.
+                            </p>
+                        </div>
 
-            <div class="row">
-                <div class="label">Πλήθος Πυρήνων</div>
+                        <div class="xarakthristika">
+                            <h3>Χαρακτηριστικά</h3>
 
-                <div class="value">Hexa Core</div>
-            </div>
+                            <p>Μέγεθος Οθόνης σε Ίντσες: 6.7 <br>
+                                Κύρια Κάμερα: Triple 48 Mp & 12 Mp & 12 Mp<br>
+                                Selfie Κάμερα: 12 Mp<br>
+                                Πλήθος Πυρήνων: Hexa Core<br>
+                                Χωρητικότητα σε GB: 128<br>
+                                Εύρος Οθόνης: 6 ίντσες και άνω
+                            </p>
+                        </div>
+                    </div>
+                </section>
 
-            <div class="row">
-                <div class="label">Χωρητικότητα σε GB</div>
+                <div id="iphone">
+                    <p>€1549.00</p>
+                </div>
 
-                <div class="value">128</div>
-            </div>
+                <img src="/assets/analytiko.jpg" class="comparison"
+                    alt="Διαφορές καινούριων μοντέλων και σύγκριση χαρακτηριστικών">
 
-            <div class="row">
-                <div class="label">Μοντέλο Επεξεργαστή</div>
+                <section class="analytika-xarakthristika">
+                    <div class="row-title">
+                        <h3>Τεχνικά Χαρακτηριστικά</h3>
+                    </div>
 
-                <div class="value">A16 Bionic chip</div>
-            </div>
+                    <div class="row">
+                        <div class="label">Mέγεθος Οθόνης σε Ίντσες</div>
 
-            <div class="row">
-                <div class="label">Δίκτυο Σύνδεσης</div>
+                        <div class="value">6.7</div>
+                    </div>
 
-                <div class="value">5G</div>
-            </div>
+                    <div class="row">
+                        <div class="label">Κύρια Κάμερα</div>
 
-            <div class="row">
-                <div class="label">Δυνατότητα Βιντεοκλήσης</div>
+                        <div class="value">Triple 48 Mp & 12 Mp & 12 Mp </div>
+                    </div>
 
-                <div class="value">Υποστηρίζεται</div>
-            </div>
+                    <div class="row">
+                        <div class="label">Selfie Κάμερα</div>
 
-            <div class="row">
-                <div class="label">Εγγραφή Video</div>
+                        <div class="value">12 Mp</div>
+                    </div>
 
-                <div class="value">4K</div>
-            </div>
+                    <div class="row">
+                        <div class="label">Πλήθος Πυρήνων</div>
 
-            <div class="row">
-                <div class="label">Δέκτης GPS</div>
+                        <div class="value">Hexa Core</div>
+                    </div>
 
-                <div class="value">AGPS, GPS, Galileo, QZSS, GLONASS, Beidou</div>
-            </div>
+                    <div class="row">
+                        <div class="label">Χωρητικότητα σε GB</div>
 
-            <div class="row">
-                <div class="label">Φλάς</div>
+                        <div class="value">128</div>
+                    </div>
 
-                <div class="value">True Tone flash & Retina Flash</div>
-            </div>
+                    <div class="row">
+                        <div class="label">Μοντέλο Επεξεργαστή</div>
 
-            <div class="row">
-                <div class="label">Χρώμα</div>
+                        <div class="value">A16 Bionic chip</div>
+                    </div>
 
-                <div class="value">Μαύρο</div>
-            </div>
+                    <div class="row">
+                        <div class="label">Δίκτυο Σύνδεσης</div>
 
-            <div class="row">
-                <div class="label">Λειτουργικό</div>
+                        <div class="value">5G</div>
+                    </div>
 
-                <div class="value">iOS</div>
-            </div>
+                    <div class="row">
+                        <div class="label">Δυνατότητα Βιντεοκλήσης</div>
 
-            <div class="row">
-                <div class="label">Βάρος σε gr</div>
+                        <div class="value">Υποστηρίζεται</div>
+                    </div>
 
-                <div class="value">240</div>
-            </div>
+                    <div class="row">
+                        <div class="label">Εγγραφή Video</div>
 
-            <div class="row">
-                <div class="label">Διαστάσεις σε mm (Υ x Π x Β)</div>
+                        <div class="value">4K</div>
+                    </div>
 
-                <div class="value">160.7 x 77.6 x 7.85</div>
-            </div>
+                    <div class="row">
+                        <div class="label">Δέκτης GPS</div>
 
-            <div class="row">
-                <div class="label">Συμπεριλαμβάνονται</div>
+                        <div class="value">AGPS, GPS, Galileo, QZSS, GLONASS, Beidou</div>
+                    </div>
 
-                <div class="value">Καλώδιο USB-C to Lightning, Έγγραφα</div>
-            </div>
+                    <div class="row">
+                        <div class="label">Φλάς</div>
 
-            <div class="row">
-                <div class="label">Υποστηρικτική τεχνολογία για κινητικές αναπηρίες</div>
+                        <div class="value">True Tone flash & Retina Flash</div>
+                    </div>
 
-                <div class="value">Διακόπτες Ελέγχου, Assistive Touch, Καθοδηγούμενη Πρόσβαση</div>
-            </div>
+                    <div class="row">
+                        <div class="label">Χρώμα</div>
 
-            <div class="row">
-                <div class="label">Υποστηρικτική τεχνολογία για μειωμένη όραση</div>
+                        <div class="value">Μαύρο</div>
+                    </div>
 
-                <div class="value">Magnifier, Επιλογές Απεικόνισης, Φωνητικός Έλεγχος, Αφήγηση</div>
-            </div>
+                    <div class="row">
+                        <div class="label">Λειτουργικό</div>
 
-            <div class="row">
-                <div class="label">Υποστηρικτική τεχνολογία για μειωμένη ακοή</div>
+                        <div class="value">iOS</div>
+                    </div>
 
-                <div class="value">Βιντεοκλήσεις μέσω FaceTime, LED Flash Alerts</div>
-            </div>
+                    <div class="row">
+                        <div class="label">Βάρος σε gr</div>
 
-            <div class="row">
-                <div class="label">>Εγγύηση Προμηθευτή</div>
+                        <div class="value">240</div>
+                    </div>
 
-                <div class="value">2 έτη</div>
-            </div>
+                    <div class="row">
+                        <div class="label">Διαστάσεις σε mm (Υ x Π x Β)</div>
 
-            <div class="row">
-                <div class="label">Site</div>
+                        <div class="value">160.7 x 77.6 x 7.85</div>
+                    </div>
 
-                <div class="value"><a href="http://www.apple.com">http://www.apple.com</a></div>
-            </div>
-        </section>
-    </main>
+                    <div class="row">
+                        <div class="label">Συμπεριλαμβάνονται</div>
 
-    <section class="forma">
-        <h3>Δώστε μας μια βαθμολογία!</h3>
+                        <div class="value">Καλώδιο USB-C to Lightning, Έγγραφα</div>
+                    </div>
 
-        <form action="/Exercise2/product-iphone14-pro-max.html" class="vathmologia-asteria">
-            <p>Βαθμολογήστε μας και αφήστε τα σχόλια σας απο κάτω!</p>
+                    <div class="row">
+                        <div class="label">Υποστηρικτική τεχνολογία για κινητικές αναπηρίες</div>
 
-            <input type="radio" id="1ast" name="vathmologia" class="epilogh" value="1 αστέρι">
-            <label for="1ast">1 αστέρι</label>
+                        <div class="value">Διακόπτες Ελέγχου, Assistive Touch, Καθοδηγούμενη Πρόσβαση</div>
+                    </div>
 
-            <input type="radio" id="2ast" name="vathmologia" class="epilogh" value="2 αστέρια">
-            <label for="2ast">2 αστέρια</label>
+                    <div class="row">
+                        <div class="label">Υποστηρικτική τεχνολογία για μειωμένη όραση</div>
 
-            <input type="radio" id="3ast" name="vathmologia" class="epilogh" value="3 αστέρια">
-            <label for="3ast">3 αστέρια</label>
+                        <div class="value">Magnifier, Επιλογές Απεικόνισης, Φωνητικός Έλεγχος, Αφήγηση</div>
+                    </div>
 
-            <input type="radio" id="4ast" name="vathmologia" class="epilogh" value="4 αστέρια">
-            <label for="4ast">4 αστέρια</label>
+                    <div class="row">
+                        <div class="label">Υποστηρικτική τεχνολογία για μειωμένη ακοή</div>
 
-            <input type="radio" id="5ast" name="vathmologia" class="epilogh" value="5 αστέρια">
-            <label for="5ast">5 αστέρια</label>
+                        <div class="value">Βιντεοκλήσεις μέσω FaceTime, LED Flash Alerts</div>
+                    </div>
 
-            <label for="sxolia" id="sxolia-title">Τα σχόλια σας:</label>
-            <textarea id="sxolia" name="sxolia" placeholder="Γράψτε εδώ..."></textarea>
-            <br>
+                    <div class="row">
+                        <div class="label">>Εγγύηση Προμηθευτή</div>
 
-            <input type="submit">
-        </form>
-    </section>
+                        <div class="value">2 έτη</div>
+                    </div>
 
-    <footer class="footer-content">
-        <h4>Βρείτε μας στα ακόλουθα social media</h4> <!-- ΙΣΩΣ ΒΑΛΟΥΜΕ ΚΛΑΣΣ ΣΤΟ Η4 ΜΟΝΟ ΤΟΥ Η ΣΤΑ ΥΠΟΛΟΙΠΑ-->
+                    <div class="row">
+                        <div class="label">Site</div>
 
-        <a href="/Exercise2/index.html">
-            <img src="/assets/facebook_logo.png" width="50" height="50" alt="Facebook λογότυπο">
-        </a>
+                        <div class="value"><a href="http://www.apple.com">http://www.apple.com</a></div>
+                    </div>
+                </section>
+            </main>
+        </div>
 
-        <a href="/Exercise2/index.html">
-            <img src="/assets/twitter_logo.png" width="50" height="50" alt="Twitter λογότυπο">
-        </a>
+        <div class="forma-item">
+            <section class="forma">
+                <h3>Δώστε μας μια βαθμολογία!</h3>
 
-        <a href="/Exercise2/index.html">
-            <img src="/assets/instagram_new.png" width="50" height="50" alt="Instagram λογότυπο">
-        </a>
+                <form action="/Exercise2/product-iphone14-pro-max.html" class="vathmologia-asteria">
+                    <p>Βαθμολογήστε μας και αφήστε τα σχόλια σας απο κάτω!</p>
 
-        <a href="/Exercise2/index.html">
-            <img src="/assets/youtube_logo.png" width="50" height="50" alt="Youtube λογότυπο">
-        </a>
+                    <input type="radio" id="1ast" name="vathmologia" class="epilogh" value="1 αστέρι">
+                    <label for="1ast">1 αστέρι</label>
 
-        <h4>©2022 Techodata Computers</h4>
+                    <input type="radio" id="2ast" name="vathmologia" class="epilogh" value="2 αστέρια">
+                    <label for="2ast">2 αστέρια</label>
 
-        <a href="/Exercise2/index.html">
-            <img src="/assets/Technodata-logos_cropped_footer.png" width="170" height="50" alt="Tecnhodata λογότυπο">
-        </a>
-    </footer>
+                    <input type="radio" id="3ast" name="vathmologia" class="epilogh" value="3 αστέρια">
+                    <label for="3ast">3 αστέρια</label>
+
+                    <input type="radio" id="4ast" name="vathmologia" class="epilogh" value="4 αστέρια">
+                    <label for="4ast">4 αστέρια</label>
+
+                    <input type="radio" id="5ast" name="vathmologia" class="epilogh" value="5 αστέρια">
+                    <label for="5ast">5 αστέρια</label>
+
+                    <label for="sxolia" id="sxolia-title">Τα σχόλια σας:</label>
+                    <textarea id="sxolia" name="sxolia" placeholder="Γράψτε εδώ..."></textarea>
+                    <br>
+
+                    <input type="submit">
+                </form>
+            </section>
+        </div>
+
+
+        <div class="footer-item">
+            <footer class="footer-content">
+                <h4>Βρείτε μας στα ακόλουθα social media</h4> <!-- ΙΣΩΣ ΒΑΛΟΥΜΕ ΚΛΑΣΣ ΣΤΟ Η4 ΜΟΝΟ ΤΟΥ Η ΣΤΑ ΥΠΟΛΟΙΠΑ-->
+
+                <a href="/Exercise2/index.html">
+                    <img src="/assets/facebook_logo.png" width="50" height="50" alt="Facebook λογότυπο">
+                </a>
+
+                <a href="/Exercise2/index.html">
+                    <img src="/assets/twitter_logo.png" width="50" height="50" alt="Twitter λογότυπο">
+                </a>
+
+                <a href="/Exercise2/index.html">
+                    <img src="/assets/instagram_new.png" width="50" height="50" alt="Instagram λογότυπο">
+                </a>
+
+                <a href="/Exercise2/index.html">
+                    <img src="/assets/youtube_logo.png" width="50" height="50" alt="Youtube λογότυπο">
+                </a>
+
+                <h4>©2022 Techodata Computers</h4>
+
+                <a href="/Exercise2/index.html">
+                    <img src="/assets/Technodata-logos_cropped_footer.png" width="170" height="50" alt="Tecnhodata λογότυπο">
+                </a>
+            </footer>
+        </div>
+    </div>  
 </body>
 
 </html>
