--- a/Exercise3/stores.html
+++ b/Exercise3/stores.html
@@ -14,65 +14,75 @@
 </head>
 
 <body>
-    <header class="header-light-color">
-        <a href="index.html"><img src="/assets/Technodata-logos_black.png" width="700" height="160"
-                alt="Technodata λογότυτπο"></a>
 
-        <nav class="navigation">
-            <a href="index.html">ΑΡΧΙΚΗ</a>
-            <a href="product-categories.html#technology">ΠΡΟΙΟΝΤΑ ΚΑΙ ΤΕΧΝΟΛΟΓΙΑ</a>
-            <a href="product-categories.html#spiti">ΓΙΑ ΤΟ ΣΠΙΤΙ</a>
-            <a href="stores.html" class="active">ΚΑΤΑΣΤΗΜΑΤΑ</a>
-            <a href="contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
-            <a href="about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
-        </nav>
-    </header>
 
-    <main class="main-content">
-        <h2>Τα καταστήματα Αθήνας</h2>
+    <div class="grid-container">
+        <div class="header-item">
+            <header class="header-light-color">
+                <a href="index.html"><img src="/assets/Technodata-logos_black.png" width="700" height="160"
+                        alt="Technodata λογότυτπο"></a>
 
-        <section class="katasthma">
-            <h3>Κατάστημα Παγκρατίου</h3>
+                <nav class="navigation">
+                    <a href="index.html">ΑΡΧΙΚΗ</a>
+                    <a href="product-categories.html#technology">ΠΡΟΙΟΝΤΑ ΚΑΙ ΤΕΧΝΟΛΟΓΙΑ</a>
+                    <a href="product-categories.html#spiti">ΓΙΑ ΤΟ ΣΠΙΤΙ</a>
+                    <a href="stores.html" class="active">ΚΑΤΑΣΤΗΜΑΤΑ</a>
+                    <a href="contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
+                    <a href="about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
+                </nav>
+            </header>
+        </div>
 
-            <p><img src="/assets/pagrati.png" width="480" height="300" alt="Τοποθεσία καταστήματος Παγκρατίου">
-                Φιλολάου 111, 166 33
-            </p>
-        </section>
+        <div class="main-item">
+            <main class="main-content">
+                <h2>Τα καταστήματα Αθήνας</h2>
 
-        <section class="katasthma">
-            <h3>Κατάστημα Νέας Ιωνίας</h3>
+                <section class="katasthma">
+                    <h3>Κατάστημα Παγκρατίου</h3>
 
-            <p><img src="/assets/nea_ionia.png" width="480" height="300" alt="Τοποθεσία καταστήματος Νέας Ιωνίας">
-                Λεωφ. Ηρακλείου 225, 142 31
-            </p>
-        </section>
-    </main>
+                    <p><img src="/assets/pagrati.png" width="480" height="300" alt="Τοποθεσία καταστήματος Παγκρατίου">
+                        Φιλολάου 111, 166 33
+                    </p>
+                </section>
 
-    <footer class="footer-content">
-        <h4>Βρείτε μας στα ακόλουθα social media</h4> <!-- ΙΣΩΣ ΒΑΛΟΥΜΕ ΚΛΑΣΣ ΣΤΟ Η4 ΜΟΝΟ ΤΟΥ Η ΣΤΑ ΥΠΟΛΟΙΠΑ-->
+                <section class="katasthma">
+                    <h3>Κατάστημα Νέας Ιωνίας</h3>
 
-        <a href="index.html">
-            <img src="/assets/facebook_logo.png" width="50" height="50" alt="Facebook λογότυπο">
-        </a>
+                    <p><img src="/assets/nea_ionia.png" width="480" height="300" alt="Τοποθεσία καταστήματος Νέας Ιωνίας">
+                        Λεωφ. Ηρακλείου 225, 142 31
+                    </p>
+                </section>
+            </main>
+        </div>
 
-        <a href="index.html">
-            <img src="/assets/twitter_logo.png" width="50" height="50" alt="Twitter λογότυπο">
-        </a>
+        <div class="footer-item">
+            <footer class="footer-content">
+                <h4>Βρείτε μας στα ακόλουθα social media</h4> <!-- ΙΣΩΣ ΒΑΛΟΥΜΕ ΚΛΑΣΣ ΣΤΟ Η4 ΜΟΝΟ ΤΟΥ Η ΣΤΑ ΥΠΟΛΟΙΠΑ-->
 
-        <a href="index.html">
-            <img src="/assets/instagram_new.png" width="50" height="50" alt="Instagram λογότυπο">
-        </a>
+                <a href="index.html">
+                    <img src="/assets/facebook_logo.png" width="50" height="50" alt="Facebook λογότυπο">
+                </a>
 
-        <a href="index.html">
-            <img src="/assets/youtube_logo.png" width="50" height="50" alt="Youtube λογότυπο">
-        </a>
+                <a href="index.html">
+                    <img src="/assets/twitter_logo.png" width="50" height="50" alt="Twitter λογότυπο">
+                </a>
 
-        <h4>©2022 Techodata Computers</h4>
+                <a href="index.html">
+                    <img src="/assets/instagram_new.png" width="50" height="50" alt="Instagram λογότυπο">
+                </a>
 
-        <a href="index.html">
-            <img src="/assets/Technodata-logos_cropped_footer.png" width="170" height="50" alt="Tecnhodata λογότυπο">
-        </a>
-    </footer>
+                <a href="index.html">
+                    <img src="/assets/youtube_logo.png" width="50" height="50" alt="Youtube λογότυπο">
+                </a>
+
+                <h4>©2022 Techodata Computers</h4>
+
+                <a href="index.html">
+                    <img src="/assets/Technodata-logos_cropped_footer.png" width="170" height="50" alt="Tecnhodata λογότυπο">
+                </a>
+            </footer>
+        </div>
+    </div>
 </body>
 
 </html>
