--- a/Exercise3/about_us.html
+++ b/Exercise3/about_us.html
@@ -14,84 +14,93 @@
 </head>
 
 <body>
-    <header class="header-light-color">
-        <a href="/Exercise2/index.html"><img src="/assets/Technodata-logos_black.png" width="700" height="160"
-                alt="Technodata λογότυτπο"></a>
 
-        <nav class="navigation">
-            <a href="/Exercise2/index.html">ΑΡΧΙΚΗ</a>
-            <a href="/Exercise2/product-categories.html#technology">ΠΡΟΙΟΝΤΑ ΚΑΙ ΤΕΧΝΟΛΟΓΙΑ</a>
-            <a href="/Exercise2/product-categories.html#spiti">ΓΙΑ ΤΟ ΣΠΙΤΙ</a>
-            <a href="/Exercise2/stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
-            <a href="/Exercise2/contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
-            <a href="/Exercise2/about_us.html" class="active">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
-        </nav>
+    <div class="grid-container">
+        <div class="header-item">
+            <header class="header-light-color">
+                <a href="/Exercise2/index.html"><img src="/assets/Technodata-logos_black.png" width="700" height="160"
+                        alt="Technodata λογότυτπο"></a>
 
-    </header>
+                <nav class="navigation">
+                    <a href="/Exercise2/index.html">ΑΡΧΙΚΗ</a>
+                    <a href="/Exercise2/product-categories.html#technology">ΠΡΟΙΟΝΤΑ ΚΑΙ ΤΕΧΝΟΛΟΓΙΑ</a>
+                    <a href="/Exercise2/product-categories.html#spiti">ΓΙΑ ΤΟ ΣΠΙΤΙ</a>
+                    <a href="/Exercise2/stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
+                    <a href="/Exercise2/contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
+                    <a href="/Exercise2/about_us.html" class="active">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
+                </nav>
 
-    <main class="main-content">
-        <h2>Ποιοι είμαστε!</h2>
+            </header>
+        </div>
 
-        <section class="perilhpsh">
-            <h3><img src="/assets/" alt="Φωτογραφία Δημήτρη Παρασκευιώτη">Δημήτριος Παρασκευιώτης</h3>
+        <div class="main-item">
+            <main class="main-content">
+                <h2>Ποιοι είμαστε!</h2>
 
-            <p>
-                Γεννημένος στην Αθήνα το 2001 και με καταγωγή απο Λαμία και Ιωάννινα, αποφοίτησε απο το Οικονομικό
-                Πανεπιστήμιο Αθηνών το 2016, συγκεκριμένα απο το τμήμα της πληροφορικής, όπου και γνωρίστηκε με τον
-                συνιδρυτή του Technodata Αναστάσιο Μπουρτσουκλή.
-                <br>Ασχολήθηκε εκτενώς στην συνέχεια με το Web Design και Digital Marketing, καθώς και με την εκμάθηση
-                καίριων ικανοτήτων και ξένων γλωσσών.
-                <br>Απο μικρός δεν έκρυψε το πάθος για αθλήματα, όπως το μπάσκετ και η ξιφασκία, στα οποία εξακολουθεί
-                να προπονείται και να παρακολουθεί.
-            </p>
+                <section class="perilhpsh">
+                    <h3><img src="/assets/" alt="Φωτογραφία Δημήτρη Παρασκευιώτη">Δημήτριος Παρασκευιώτης</h3>
 
-            <h3>
-                <img src="/assets/" alt="Φωτογραφία Τάσου Μπουρτσουκλή">Αναστάσιος Μπουρτσουκλής
-            </h3>
+                    <p>
+                        Γεννημένος στην Αθήνα το 2001 και με καταγωγή απο Λαμία και Ιωάννινα, αποφοίτησε απο το Οικονομικό
+                        Πανεπιστήμιο Αθηνών το 2016, συγκεκριμένα απο το τμήμα της πληροφορικής, όπου και γνωρίστηκε με τον
+                        συνιδρυτή του Technodata Αναστάσιο Μπουρτσουκλή.
+                        <br>Ασχολήθηκε εκτενώς στην συνέχεια με το Web Design και Digital Marketing, καθώς και με την εκμάθηση
+                        καίριων ικανοτήτων και ξένων γλωσσών.
+                        <br>Απο μικρός δεν έκρυψε το πάθος για αθλήματα, όπως το μπάσκετ και η ξιφασκία, στα οποία εξακολουθεί
+                        να προπονείται και να παρακολουθεί.
+                    </p>
 
-            <p>
-                Γεννήθηκε και μεγάλωσε στην Νέα Ιωνία Αττικής το έτος 2001. Ολοκλήρωσε τις σπουδές του απο το τμήμα
-                πληροφορικής του Οικονομικού Πανεπιστημίου Αθηνών το 2016 και στην συνέχεια ασχολήθηκε με το front end
-                development.
-                <br>Είναι κάτοχος ανώτατου πτυχίου ξένων γλωσσών στα Αγγλικά και Γαλλικά και στον ελευθερό του χρόνο
-                ασχολείται με τον μηχανοκίνητο αθλητισμό και το χόμπι του για αμάξια.
-            </p>
-        </section>
+                    <h3>
+                        <img src="/assets/" alt="Φωτογραφία Τάσου Μπουρτσουκλή">Αναστάσιος Μπουρτσουκλής
+                    </h3>
 
-        <p id="synexeia-perilhpshs">
-            Οι δρόμοι τους θα συναντηθούν ξανα το 2022, όπου αποφάσισαν να αφήσουν τις θέσεις τους στις εταιρείες που
-            εργαζόντουσαν και να ιδρύσουν το Technodata.
-            <br>Πλέον, έχοντας περισσότερα απο 15 καταστήματα σε Ελλάδα και Κύπρο, ο όμιλος Technodata προσφέρει μια
-            ευρεία γκάμα προϊόντων τεχνολογίας και συσκευών για το σπίτι με την καλύτερη εξυπηρέτηση και τιμές της
-            αγοράς.
-        </p>
-    </main>
+                    <p>
+                        Γεννήθηκε και μεγάλωσε στην Νέα Ιωνία Αττικής το έτος 2001. Ολοκλήρωσε τις σπουδές του απο το τμήμα
+                        πληροφορικής του Οικονομικού Πανεπιστημίου Αθηνών το 2016 και στην συνέχεια ασχολήθηκε με το front end
+                        development.
+                        <br>Είναι κάτοχος ανώτατου πτυχίου ξένων γλωσσών στα Αγγλικά και Γαλλικά και στον ελευθερό του χρόνο
+                        ασχολείται με τον μηχανοκίνητο αθλητισμό και το χόμπι του για αμάξια.
+                    </p>
+                </section>
 
-    <footer class="footer-content">
-        <h4>Βρείτε μας στα ακόλουθα social media</h4>
+                <p id="synexeia-perilhpshs">
+                    Οι δρόμοι τους θα συναντηθούν ξανα το 2022, όπου αποφάσισαν να αφήσουν τις θέσεις τους στις εταιρείες που
+                    εργαζόντουσαν και να ιδρύσουν το Technodata.
+                    <br>Πλέον, έχοντας περισσότερα απο 15 καταστήματα σε Ελλάδα και Κύπρο, ο όμιλος Technodata προσφέρει μια
+                    ευρεία γκάμα προϊόντων τεχνολογίας και συσκευών για το σπίτι με την καλύτερη εξυπηρέτηση και τιμές της
+                    αγοράς.
+                </p>
+            </main>
+        </div>
 
-        <a href="/Exercise2/index.html">
-            <img src="/assets/facebook_logo.png" width="50" height="50" alt="Facebook λογότυπο">
-        </a>
+        <div class="footer-item">
+            <footer class="footer-content">
+                <h4>Βρείτε μας στα ακόλουθα social media</h4>
 
-        <a href="/Exercise2/index.html">
-            <img src="/assets/twitter_logo.png" width="50" height="50" alt="Twitter λογότυπο">
-        </a>
+                <a href="/Exercise2/index.html">
+                    <img src="/assets/facebook_logo.png" width="50" height="50" alt="Facebook λογότυπο">
+                </a>
 
-        <a href="/Exercise2/index.html">
-            <img src="/assets/instagram_new.png" width="50" height="50" alt="Instagram λογότυπο">
-        </a>
+                <a href="/Exercise2/index.html">
+                    <img src="/assets/twitter_logo.png" width="50" height="50" alt="Twitter λογότυπο">
+                </a>
 
-        <a href="/Exercise2/index.html">
-            <img src="/assets/youtube_logo.png" width="50" height="50" alt="Youtube λογότυπο">
-        </a>
+                <a href="/Exercise2/index.html">
+                    <img src="/assets/instagram_new.png" width="50" height="50" alt="Instagram λογότυπο">
+                </a>
 
-        <h4>©2022 Techodata Computers</h4>
+                <a href="/Exercise2/index.html">
+                    <img src="/assets/youtube_logo.png" width="50" height="50" alt="Youtube λογότυπο">
+                </a>
 
-        <a href="/Exercise2/index.html">
-            <img src="/assets/Technodata-logos_cropped_footer.png" width="170" height="50" alt="Tecnhodata λογότυπο">
-        </a>
-    </footer>
+                <h4>©2022 Techodata Computers</h4>
+
+                <a href="/Exercise2/index.html">
+                    <img src="/assets/Technodata-logos_cropped_footer.png" width="170" height="50" alt="Tecnhodata λογότυπο">
+                </a>
+            </footer>
+        </div>
+    </div>
 </body>
 
 </html>
